CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(REGRESSION)

MACRO(ADD_REGRESSION_EXECUTABLE name source)
    ADD_EXECUTABLE(${name} ${source} ${ARGN})
ENDMACRO(ADD_REGRESSION_EXECUTABLE name source)

SUBDIRS(Demos)

SET(REGRESSION_MAKE_OK_FILES_EXEC OFF CACHE BOOL "Make routines to generation .ok files")
MARK_AS_ADVANCED(REGRESSION_MAKE_OK_FILES_EXEC)

# Add Definitions to work Path
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_MODULE_PATH})

IF( WIN32 )
	ADD_DEFINITIONS(-DUSR_WIN_32="1")
ENDIF(WIN32)

ADD_DEFINITIONS(-DREG_PATH="${CMAKE_SOURCE_DIR}/")


