CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(REGRESSION)

SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/dist CACHE FILEPATH "" FORCE)

# Look for Nektar++ in the standard location (Nektar++/builds) 
# This will work no matter where the regression build is.
SET(Nektar++_DIR "${CMAKE_SOURCE_DIR}/../builds/dist" CACHE PATH "")

FIND_PACKAGE(Nektar++ REQUIRED)
ADD_DEFINITIONS(-DNEKTAR_BIN_DIR="${NEKTAR++_BIN_DIR}/")

MACRO(ADD_REGRESSION_EXECUTABLE name source)
    ADD_EXECUTABLE(${name} ${source} ${ARGN})
    TARGET_LINK_LIBRARIES(${name} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})

	INSTALL(TARGETS ${name} 
			RUNTIME DESTINATION ${NEKTAR_BIN_DIR} COMPONENT test OPTIONAL
			ARCHIVE DESTINATION ${NEKTAR_LIB_DIR} COMPONENT test OPTIONAL
			LIBRARY DESTINATION ${NEKTAR_LIB_DIR} COMPONENT test OPTIONAL)

ENDMACRO(ADD_REGRESSION_EXECUTABLE name source)

SUBDIRS(Demos Solvers)

SET(REGRESSION_MAKE_OK_FILES_EXEC OFF CACHE BOOL "Make routines to generation .ok files")
MARK_AS_ADVANCED(REGRESSION_MAKE_OK_FILES_EXEC)
SET(REGRESSION_USE_PATH ON CACHE BOOL "Use absolute paths to regression tests.")
MARK_AS_ADVANCED(REGRESSION_USE_PATH)

# Add Definitions to work Path
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_MODULE_PATH})

IF( WIN32 )
	ADD_DEFINITIONS(-DUSR_WIN_32="1")
ENDIF(WIN32)

ADD_DEFINITIONS(-DREG_PATH="${CMAKE_SOURCE_DIR}/")
#ADD_DEFINITIONS(-DREG_PATH="${CMAKE_INSTALL_PREFIX}/${NEKTAR_SHARE_DIR}/test/")

IF (REGRESSION_USE_PATH)
		ADD_DEFINITIONS(-DUSE_PATH="1")
ENDIF (REGRESSION_USE_PATH)

#SET(SOLVER_DIR "${CMAKE_SOURCE_DIR}/../solvers/builds" CACHE PATH "")
SET(SOLVER_DIR "${CMAKE_SOURCE_DIR}/../solvers/builds" CACHE PATH "")

ADD_DEFINITIONS(-DNEKTAR_SOLVER_DIR="${SOLVER_DIR}/")

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/runtests.sh
    ${CMAKE_CURRENT_BINARY_DIR}/runtests.sh COPYONLY)

SET(CPACK_COMPONENTS_ALL test)
SET(CPACK_COMPONENT_TEST_DESCRIPTION "Regression tests for Nektar++")
INCLUDE(CPack)
